<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Playback"
        tools:ignore="TextContrastCheck">
        <SwitchPreference
            android:defaultValue="true"
            android:key="playOverAudio"
            android:title="@string/setting_play_sounds_over_music" />
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/stream_type_entries"
            android:entryValues="@array/stream_type_values"
            android:key="streamType"
            android:summary="@string/setting_stream_type_desc"
            android:title="@string/setting_stream_type" />
    </PreferenceCategory>

</PreferenceScreen>